--- a/app/templates/buku/index.html
+++ b/app/templates/buku/index.html
@@ -42,4 +42,35 @@
             </form>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+        <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Kode Buku</th>
+                <th>Judul Buku</th>
+                <th>Pengarang</th>
+                <th>Penerbit</th>
+                <th>Tahun Terbit</th>
+              </tr>
+            </thead>
+            <tbody>
+                {%for b in buku%}
+                    <tr>
+                        <td>{{b.kd_buku}}</td>
+                        <td>{{b.judul}}</td>
+                        <td>{{b.pengarang}}</td>
+                        <td>{{b.penerbit}}</td>
+                        <td>{{b.tahun_terbit}}</td>
+                        <td>
+                            <a href="{{url_for('edit_buku', id=b.id)}}" class="btn btn-primary"><span class="glyphicon glyphicon-pencil"></span></a>
+                            <a href="{{url_for('delete_buku', id=b.id)}}" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span></a>
+                        </td>
+                    </tr>
+                {%endfor%}
+
+            </tbody>
+        </table>
+        </div>
+    </div>
 {%endblock%}
